--- a/index.html
+++ b/index.html
@@ -4,98 +4,100 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio da Rotina</title>
-    <style>
-        /* Estilo embutido para garantir que o layout funcione */
-        body {
-            background-color: #1a1a1a;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            overflow: hidden;
-        }
+<style>
+    body {
+        background-color: #1a1a1a;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        overflow: hidden;
+    }
 
-        .clock-container {
-            position: relative;
-            width: 90vw;
-            height: 90vw;
-            max-width: 550px;
-            max-height: 550px;
-            background: #222;
-            border-radius: 50%;
-            border: 8px solid #333;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+    .clock-container {
+        position: relative;
+        width: 85vw;
+        height: 85vw;
+        max-width: 500px;
+        max-height: 500px;
+        background: #222;
+        border-radius: 50%;
+        border: 10px solid #333;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        box-shadow: 0 0 30px rgba(0,0,0,0.5);
+    }
 
-        #sectors-container {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            overflow: hidden;
-        }
+    #sectors-container {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+    }
 
-        .sector {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            transform-origin: center;
-            clip-path: polygon(50% 50%, 47% 0%, 53% 0%); /* Fatia fina para o fundo */
-            animation: colorChange 10s infinite alternate;
-        }
+    .sector {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform-origin: center;
+        /* ESTE CLIP-PATH CRIA UMA FATIA DE EXATOS 30 GRAUS */
+        clip-path: polygon(50% 50%, 50% 0%, 76.8% 0%); 
+        animation: colorChange 12s infinite linear;
+    }
 
-        @keyframes colorChange {
-            0% { filter: hue-rotate(0deg); }
-            100% { filter: hue-rotate(360deg); }
-        }
+    @keyframes colorChange {
+        0% { filter: hue-rotate(0deg) brightness(1); }
+        100% { filter: hue-rotate(360deg) brightness(1.2); }
+    }
 
-        .activity-icon {
-            position: absolute;
-            width: 50px;
-            height: 50px;
-            font-size: 35px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 5;
-        }
+    .activity-icon {
+        position: absolute;
+        width: 60px;
+        height: 60px;
+        font-size: 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        z-index: 5;
+    }
 
-        .hand {
-            position: absolute;
-            bottom: 50%;
-            left: 50%;
-            transform-origin: bottom center;
-            border-radius: 10px;
-            z-index: 10;
-        }
+    .hand {
+        position: absolute;
+        bottom: 50%;
+        left: 50%;
+        transform-origin: bottom center;
+        border-radius: 20px;
+        z-index: 10;
+    }
 
-        .hour-hand {
-            width: 12px;
-            height: 35%;
-            background: #ffffff;
-            box-shadow: 0 0 15px #fff;
-            margin-left: -6px;
-        }
+    .hour-hand {
+        width: 14px;
+        height: 30%;
+        background: #ffffff;
+        box-shadow: 0 0 20px #fff;
+        margin-left: -7px;
+    }
 
-        .minute-hand {
-            width: 3px;
-            height: 42%;
-            background: rgba(255, 255, 255, 0.4);
-            margin-left: -1.5px;
-        }
+    .minute-hand {
+        width: 4px;
+        height: 40%;
+        background: rgba(255, 255, 255, 0.4);
+        margin-left: -2px;
+    }
 
-        .center-dot {
-            position: absolute;
-            width: 15px;
-            height: 15px;
-            background: white;
-            border-radius: 50%;
-            z-index: 15;
-        }
-    </style>
+    .center-dot {
+        position: absolute;
+        width: 20px;
+        height: 20px;
+        background: white;
+        border-radius: 50%;
+        z-index: 15;
+        box-shadow: 0 0 10px rgba(0,0,0,0.5);
+    }
+        </style>
+    
 </head>
 <body>
     <div class="clock-container" id="main-clock">
