--- a/index.html
+++ b/index.html
@@ -3,53 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relógio da Rotina - TV Mode</title>
+    <title>Relógio da Rotina - Modo TV</title>
     <style>
+        /* Importando uma fonte mais divertida */
+        @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+
         body {
-            background-color: #000; /* Fundo preto puro ajuda a preservar a TV */
+            background-color: #000;
             margin: 0;
             overflow: hidden;
             height: 100vh;
             width: 100vw;
+            display: flex;
         }
 
-        /* Container que flutua pela tela */
+        /* Container que se move sem sair da tela */
         #floating-wrapper {
             position: absolute;
-            width: 600px;
+            width: 600px; 
             height: 600px;
             display: flex;
             justify-content: center;
             align-items: center;
-            animation: moveAround 40s linear infinite alternate;
+            /* Animação com translate evita que o objeto "fuga" da tela */
+            animation: moveAround 30s ease-in-out infinite alternate;
         }
 
         @keyframes moveAround {
-            0% { top: 0%; left: 0%; }
-            25% { top: 10%; left: 40%; }
-            50% { top: 30%; left: 10%; }
-            75% { top: 5%; left: 30%; }
-            100% { top: 20%; left: 0%; }
+            0% { transform: translate(0, 0); }
+            33% { transform: translate(calc(100vw - 600px), 10vh); }
+            66% { transform: translate(10vw, calc(100vh - 600px)); }
+            100% { transform: translate(calc(100vw - 600px), calc(100vh - 600px)); }
         }
 
         .clock-container {
             position: relative;
-            width: 500px;
-            height: 500px;
+            width: 480px;
+            height: 480px;
             border-radius: 50%;
             display: flex;
             justify-content: center;
             align-items: center;
         }
 
-        /* Fatias arredondadas (Setores Circulares) */
         #sectors-container {
             position: absolute;
             width: 100%;
             height: 100%;
             border-radius: 50%;
-            overflow: hidden; /* Garante o formato circular */
+            overflow: hidden;
             mask-image: radial-gradient(circle, white 100%, black 100%);
+            -webkit-mask-image: radial-gradient(circle, white 100%, black 100%);
         }
 
         .sector {
@@ -58,39 +62,30 @@
             height: 100%;
             transform-origin: center;
             clip-path: polygon(50% 50%, 50% 0%, 77% 0%);
-            animation: rainbow 15s infinite linear;
-        }
-
-        @keyframes rainbow {
-            0% { filter: hue-rotate(0deg); }
-            100% { filter: hue-rotate(360deg); }
-        }
-
-        .activity-icon, .clock-number {
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 5;
-            transition: color 1s;
-        }
-
-        .activity-icon {
-            font-size: 45px;
-            width: 60px;
-            height: 60px;
+            animation: rainbow 10s infinite linear;
         }
 
         .clock-number {
-            font-size: 28px;
+            position: absolute;
+            font-size: 50px; /* Números maiores */
             font-weight: bold;
-            color: white;
-            font-family: 'Arial', sans-serif;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
-            animation: rainbow 15s infinite linear;
+            font-family: 'Fredoka One', cursive; /* Fonte divertida */
+            z-index: 5;
+            text-shadow: 3px 3px 6px rgba(0,0,0,0.9);
+            animation: rainbow 10s infinite linear; /* Mudando de cor */
         }
 
-        /* Ponteiros */
+        @keyframes rainbow {
+            0% { filter: hue-rotate(0deg) brightness(1.2); }
+            100% { filter: hue-rotate(360deg) brightness(1.2); }
+        }
+
+        .activity-icon {
+            position: absolute;
+            font-size: 55px;
+            z-index: 6;
+        }
+
         .hand {
             position: absolute;
             bottom: 50%;
@@ -101,24 +96,24 @@
         }
 
         .hour-hand {
-            width: 16px;
-            height: 30%;
+            width: 18px;
+            height: 28%;
             background: #fff;
             box-shadow: 0 0 25px #fff;
-            margin-left: -8px;
+            margin-left: -9px;
         }
 
         .minute-hand {
-            width: 4px;
-            height: 42%;
+            width: 5px;
+            height: 40%;
             background: rgba(255, 255, 255, 0.4);
-            margin-left: -2px;
+            margin-left: -2.5px;
         }
 
         .center-dot {
             position: absolute;
-            width: 20px;
-            height: 20px;
+            width: 25px;
+            height: 25px;
             background: white;
             border-radius: 50%;
             z-index: 15;
